# libwouldblock

./: CHANGELOG  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  libwouldblock.pc.in
include/: Makefile.am  wouldblock.h
lib/: Makefile.am  wouldblock.c
test/: Makefile.am  wouldblock_basic.c
