##=============================================================================
##
## libwouldblock: Top-level automake file
##
##=============================================================================

ACLOCAL_AMFLAGS=-Im4

SUBDIRS=\
	include \
	lib \
	test

pkgconfigdir=$(libdir)/pkgconfig
pkgconfig_DATA=@PACKAGE_NAME@.pc

## EOF
