##=============================================================================
##
## libwouldblock: Top-level automake file
##
##=============================================================================

ACLOCAL_AMFLAGS=-Im4

SUBDIRS=\
	lib 

pkgconfigdir=$(libdir)/pkgconfig
pkgconfig_DATA=@PACKAGE_NAME@.pc

## EOF
