##=============================================================================
##
## libwouldblock: src/Makefile.am
##
##=============================================================================

lib_LTLIBRARIES=\
	libwouldblock.la

libwouldblock_la_LDFLAGS=\
	-version-info ${WOULDBLOCK_LIB_VERSION}

libwouldblock_la_SOURCES=\
	wouldblock.c

# EOF
