##=============================================================================
##
## libwouldblock: test/Makefile.am
##
##=============================================================================

AM_CFLAGS=\
 	-I@top_srcdir@/include

LDADD=../lib/libwouldblock.la

AM_DEFAULT_SOURCE_EXT=.c
check_PROGRAMS=\
	wouldblock_basic

TESTS=\
	wouldblock_basic

# EOF
